--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ docx2txt
 llama-index==0.10.57 
 llama-index-agent-openai==0.2.5
 llama-index-cli==0.1.12
-llama-index-core==0.10.39.post1
+llama-index-core==0.10.57
 llama-index-embeddings-openai==0.1.10
 llama-index-indices-managed-llama-cloud==0.1.6
 llama-index-legacy==0.9.48
