--- a/requirements.txt
+++ b/requirements.txt
@@ -2,22 +2,22 @@ azure-core==1.30.1
 azure-identity==1.16.0
 azure-storage-blob==12.20.0
 docx2txt
-llama-index==0.10.39
-llama-index-agent-openai==0.2.5
-llama-index-cli==0.1.12
-llama-index-core==0.10.39.post1
-llama-index-embeddings-openai==0.1.10
-llama-index-indices-managed-llama-cloud==0.1.6
-llama-index-legacy==0.9.48
-llama-index-llms-openai==0.1.21
-llama-index-multi-modal-llms-openai==0.1.6
-llama-index-program-openai==0.1.6
-llama-index-question-gen-openai==0.1.3
-llama-index-readers-azstorage-blob==0.1.5
-llama-index-readers-file==0.1.23
-llama-index-readers-llama-parse==0.1.4
-llama-parse==0.4.3
-llamaindex-py-client==0.1.19
-openai==1.30.3
+llama-index
+llama-index-agent-openai
+llama-index-cli
+llama-index-core
+llama-index-embeddings-openai
+llama-index-indices-managed-llama-cloud
+llama-index-legacy
+llama-index-llms-openai
+llama-index-multi-modal-llms-openai
+llama-index-program-openai
+llama-index-question-gen-openai
+llama-index-readers-azstorage-blob
+llama-index-readers-file
+llama-index-readers-llama-parse
+llama-parse
+llamaindex-py-client
+openai
 python-dotenv
 streamlit==1.35.0
