--- a/requirements.txt
+++ b/requirements.txt
@@ -1,185 +1,31 @@
-aiofiles==24.1.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.14
-aiosignal==1.4.0
-aiosqlite==0.21.0
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.9.0
-argilla==2.8.0
-async-timeout==5.0.1
-attrs==25.3.0
 azure-core==1.30.1
 azure-identity==1.16.0
 azure-storage-blob==12.20.0
-backoff==2.2.1
-banks==2.2.0
-beautifulsoup4==4.13.4
-blinker==1.9.0
-bm25s==0.2.13
-cachetools==5.5.2
-certifi==2025.7.14
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.2
-click==8.1.8
-colorama==0.4.6
-cryptography==45.0.5
-dataclasses-json==0.6.7
-datasets==4.0.0
-defusedxml==0.7.1
-Deprecated==1.2.18
-dill==0.3.8
-dirtyjson==1.0.8
-distro==1.9.0
-docx2txt==0.9
-emoji==2.14.1
-et_xmlfile==2.0.0
-eval_type_backport==0.2.2
-exceptiongroup==1.3.0
-faiss-cpu==1.11.0.post1
-filelock==3.18.0
-filetype==1.2.0
-frozenlist==1.7.0
-fsspec==2025.3.0
-gitdb==4.0.12
-GitPython==3.1.44
-greenlet==3.2.3
-griffe==1.7.3
-h11==0.16.0
-hf-xet==1.1.5
-html5lib==1.1
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.33.4
-idna==3.10
-importlib_metadata==8.7.0
-isodate==0.7.2
-Jinja2==3.1.6
-jiter==0.10.0
-joblib==1.5.1
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
-langdetect==1.0.9
-llama-cloud==0.1.32
-llama-cloud-services==0.6.43
-llama-index==0.12.50
-llama-index-agent-openai==0.4.12
-llama-index-cli==0.4.4
-llama-index-core==0.12.50
-llama-index-embeddings-azure-openai==0.3.9
-llama-index-embeddings-openai==0.3.1
-llama-index-indices-managed-llama-cloud==0.7.10
-llama-index-instrumentation==0.3.0
-llama-index-legacy==0.9.48.post4
-llama-index-llms-azure-openai==0.3.4
-llama-index-llms-openai==0.4.7
-llama-index-multi-modal-llms-openai==0.5.3
-llama-index-program-openai==0.3.2
-llama-index-question-gen-openai==0.3.1
-llama-index-readers-azstorage-blob==0.3.1
-llama-index-readers-file==0.4.11
-llama-index-readers-llama-parse==0.4.0
-llama-index-retrievers-bm25==0.5.2
-llama-index-vector-stores-faiss==0.4.0
-llama-index-workflows==1.1.0
-llama-parse==0.6.43
-llamaindex-py-client==0.1.19
-lxml==6.0.0
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-mdurl==0.1.2
-mpmath==1.3.0
-msal==1.32.3
-msal-extensions==1.3.1
-msg-parser==1.2.0
-multidict==6.6.3
-multiprocess==0.70.16
-mypy_extensions==1.1.0
-narwhals==1.47.1
-nest-asyncio==1.6.0
-networkx==3.2.1
-nltk==3.9.1
-numpy==1.26.4
-olefile==0.47
-openai==1.97.0
-openpyxl==3.1.5
-packaging==24.2
-pandas==2.2.3
-pdf2image==1.17.0
-pdfminer==20191125
-pdfminer.six==20250506
-pdfplumber==0.11.7
-pillow==10.4.0
-platformdirs==4.3.8
-propcache==0.3.2
-protobuf==4.25.8
-psutil==7.0.0
-pyarrow==21.0.0
-pycparser==2.22
-pycryptodome==3.23.0
-pydantic==2.11.7
-pydantic_core==2.33.2
-pydeck==0.9.1
-Pygments==2.19.2
-PyJWT==2.10.1
-pypandoc==1.15
-pypdf==5.8.0
-pypdfium2==4.30.1
-PyStemmer==2.2.0.3
-python-dateutil==2.9.0.post0
-python-docx==1.2.0
-python-dotenv==1.1.1
-python-iso639==2025.2.18
-python-magic==0.4.27
-python-oxmsg==0.0.2
-python-pptx==1.0.2
-pytz==2025.2
-PyYAML==6.0.2
-RapidFuzz==3.13.0
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.4
-requests-toolbelt==1.0.0
-rich==13.9.4
-rpds-py==0.26.0
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.13.1
-sentence-transformers==5.0.0
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.7
-SQLAlchemy==2.0.41
-standardwebhooks==1.0.0
+docx2txt
+llama-index
+llama-index-agent-openai
+llama-index-cli
+llama-index-core
+llama-index-embeddings-openai
+llama-index-indices-managed-llama-cloud
+llama-index-legacy
+llama-index-llms-openai
+llama-index-multi-modal-llms-openai
+llama-index-program-openai
+llama-index-question-gen-openai
+llama-index-readers-azstorage-blob
+llama-index-readers-file
+llama-index-readers-llama-parse
+llama-parse
+llamaindex-py-client
+openai
+python-dotenv
 streamlit==1.35.0
-striprtf==0.0.26
-sympy==1.14.0
-tabulate==0.9.0
-tenacity==8.5.0
-threadpoolctl==3.6.0
-tiktoken==0.9.0
-tokenizers==0.21.2
-toml==0.10.2
-torch==2.7.1
-tornado==6.5.1
-tqdm==4.67.1
-transformers==4.53.3
-types-Deprecated==1.2.15.20250304
-types-python-dateutil==2.9.0.20250708
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-tzdata==2025.2
+pdfminer.six==20220524
 unstructured==0.6.7
-unstructured-client==0.39.1
-urllib3==2.5.0
-webencodings==0.5.1
-wrapt==1.17.2
-xlsxwriter==3.2.5
-xxhash==3.5.0
-yarl==1.20.1
-zipp==3.23.0
+llama-index-embeddings-azure-openai
+llama-index-llms-azure-openai 
+sentence-transformers
+llama-index-retrievers-bm25
+llama-index-vector-stores-faiss
+faiss-cpu
